--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -18,11 +18,6 @@
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.Login" >
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".DetailActivity"
@@ -35,10 +30,19 @@
             android:name=".CommentsActivity"
             android:label="@string/title_activity_comments"
             android:parentActivityName=".DetailActivity"
-            android:theme="@style/AppTheme.Login">
+            android:theme="@style/AppTheme.Login" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lbcinternal.sensemble.DetailActivity" />
+        </activity>
+        <activity
+            android:name=".AddCommentActivity"
+            android:label="@string/title_activity_add_comment" >
         </activity>
     </application>
 
