--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,46 +10,46 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name=".MainActivity"
+            android:name=".activities.MainActivity"
             android:label="@string/app_name" >
         </activity>
         <activity
-            android:name=".LoginActivity"
+            android:name=".activities.LoginActivity"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.Login" >
-        </activity>
-        <activity
-            android:name=".DetailActivity"
-            android:parentActivityName=".MainActivity" >
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.lbcinternal.sensemble.MainActivity" />
-        </activity>
-        <activity
-            android:name=".CommentsActivity"
-            android:label="@string/title_activity_comments"
-            android:parentActivityName=".DetailActivity"
             android:theme="@style/AppTheme.Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-            <meta-data
-                android:name="android.support.PARENT_ACTIVITY"
-                android:value="com.lbcinternal.sensemble.DetailActivity" />
         </activity>
         <activity
-            android:name=".AddCommentActivity"
+            android:name=".activities.DetailActivity"
+            android:parentActivityName=".activities.MainActivity" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.MainActivity" />
+        </activity>
+        <activity
+            android:name=".activities.CommentsActivity"
+            android:label="@string/title_activity_comments"
+            android:parentActivityName=".activities.DetailActivity"
+            android:theme="@style/AppTheme.Login" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.DetailActivity" />
+        </activity>
+        <activity
+            android:name=".activities.AddCommentActivity"
             android:label="@string/title_activity_add_comment"
-            android:parentActivityName=".CommentsActivity"
+            android:parentActivityName=".activities.CommentsActivity"
             android:theme="@style/AppTheme.Login"
             android:windowSoftInputMode="stateAlwaysVisible" >
         </activity>
         <meta-data
             android:name="android.support.PARENT_ACTIVITY"
-            android:value="com.lbcinternal.sensemble.CommentsActivity" />
+            android:value=".activities.CommentsActivity" />
     </application>
 
 </manifest>
