--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,6 +17,7 @@
             android:name=".activities.LoginActivity"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
+            android:noHistory="true"
             android:theme="@style/AppTheme.Login" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
