--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,9 +9,15 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
+        <meta-data
+            android:name="android.app.default_searchable"
+            android:value=".activities.SearchResultsActivity" />
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
+            <meta-data
+                android:name="android.app.searchable"
+                android:resource="@xml/searchable" />
         </activity>
         <activity
             android:name=".activities.LoginActivity"
@@ -47,18 +53,16 @@
             android:parentActivityName=".activities.CommentsActivity"
             android:theme="@style/AppTheme.ActionBar"
             android:windowSoftInputMode="stateAlwaysVisible" >
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value=".activities.CommentsActivity" />
         </activity>
-
-        <meta-data
-            android:name="android.support.PARENT_ACTIVITY"
-            android:value=".activities.CommentsActivity" />
-
         <activity
             android:name=".activities.WebViewActivity"
+            android:hardwareAccelerated="true"
             android:noHistory="true"
             android:parentActivityName=".activities.LoginActivity"
-            android:hardwareAccelerated="true"
-            android:windowSoftInputMode="adjustResize">
+            android:windowSoftInputMode="adjustResize" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lbcinternal.sensemble.activities.LoginActivity" />
@@ -67,10 +71,21 @@
             android:name=".activities.CheckEmailActivity"
             android:label="@string/title_activity_check_email"
             android:parentActivityName=".activities.LoginActivity"
-            android:theme="@style/AppTheme.ActionBar">
+            android:theme="@style/AppTheme.ActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value="com.lbcinternal.sensemble.activities.LoginActivity" />
+        </activity>
+        <activity
+            android:name=".activities.SearchResultsActivity"
+            android:label="@string/title_activity_search"
+            android:parentActivityName=".activities.MainActivity" >
+            <intent-filter>
+                <action android:name="android.intent.action.SEARCH" />
+            </intent-filter>
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="com.lbcinternal.sensemble.activities.MainActivity" />
         </activity>
     </application>
 
