--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,5 +28,5 @@ dependencies {
     compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
     compile 'com.google.android.gms:play-services:6.5.87'
-    compile files('libs/sendgrid-java.jar')
+    compile files('src/libs/sendgrid-java.jar')
 }
