--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,6 +14,7 @@
         <meta-data
             android:name="android.app.default_searchable"
             android:value=".activities.SearchResultsActivity" />
+
         <activity
             android:name=".activities.MainActivity"
             android:label="@string/app_name" >
@@ -36,7 +37,7 @@
         <activity
             android:name=".activities.DetailActivity"
             android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppTheme.ActionBar">
+            android:theme="@style/AppTheme.ActionBar" >
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
@@ -90,12 +91,18 @@
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
             </intent-filter>
+
             <meta-data
                 android:name="android.app.searchable"
                 android:resource="@xml/searchable" />
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
                 android:value=".activities.MainActivity" />
+        </activity>
+        <activity
+            android:name=".activities.PostIdeaWelcomeActivity"
+            android:label="Instructions"
+            android:theme="@style/AppTheme.ActionBar" >
         </activity>
     </application>
 
