--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,8 +8,9 @@ android {
         applicationId "com.lbcinternal.sensemble"
         minSdkVersion 13
         targetSdkVersion 22
-        versionCode 3
-        versionName "1.2"
+        versionCode 4
+        versionName "1.3"
+        multiDexEnabled = true
     }
     buildTypes {
         release {
@@ -24,13 +25,14 @@ android {
 }
 
 dependencies {
-    compile 'com.android.support:appcompat-v7:22.0.0'
-    compile 'com.android.support:support-v4:22.0.0'
+    compile project(':sendgrid-android')
+    compile 'com.android.support:appcompat-v7:22.1.1'
     compile 'com.squareup.retrofit:retrofit:1.9.0'
     compile 'com.squareup.okhttp:okhttp:2.3.0'
-    compile 'com.squareup.okhttp:okhttp-urlconnection:2.0.0'
-    compile 'com.melnykov:floatingactionbutton:1.2.0'
     compile 'com.squareup.picasso:picasso:2.5.2'
-    compile 'com.google.android.gms:play-services:6.5.87'
-    compile project(':sendgrid-android')
+    compile 'com.melnykov:floatingactionbutton:1.2.0'
+    compile 'com.google.android.gms:play-services:7.3.0'
+    compile 'com.google.guava:guava:18.0'
+    compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0-beta'
+    compile(group: 'com.microsoft.azure', name: 'azure-notifications-handler', version: '1.0.1', ext: 'jar')
 }
