--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,108 +1,126 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.lbcinternal.sensemble" >
+<manifest
+    package="com.lbcinternal.sensemble"
+    xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/>
+    <uses-permission android:name="com.lbcinternal.sensemble.permission.C2D_MESSAGE"/>
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE"/>
+    <uses-permission android:name="android.permission.GET_ACCOUNTS"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
+
+    <permission
+        android:name="com.lbcinternal.sensemble.permission.C2D_MESSAGE"
+        android:protectionLevel="signature"/>
 
     <application
         android:name=".CroydonApp"
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+        android:theme="@style/AppTheme">
+        <receiver
+            android:name="com.microsoft.windowsazure.notifications.NotificationsBroadcastReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND">
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE"/>
+                <category android:name="com.lbcinternal.sensemble"/>
+            </intent-filter>
+        </receiver>
+
         <meta-data
             android:name="android.app.default_searchable"
-            android:value=".activities.SearchResultsActivity" />
+            android:value=".activities.SearchResultsActivity"/>
 
         <activity
             android:name=".activities.MainActivity"
-            android:label="@string/app_name" >
+            android:label="@string/app_name">
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+                android:resource="@xml/searchable"/>
         </activity>
         <activity
             android:name=".activities.LoginActivity"
             android:icon="@mipmap/ic_launcher"
             android:label="@string/app_name"
             android:noHistory="true"
-            android:theme="@style/AppTheme.Login" >
+            android:theme="@style/AppTheme.Login">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
+                <action android:name="android.intent.action.MAIN"/>
 
-                <category android:name="android.intent.category.LAUNCHER" />
+                <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
         </activity>
         <activity
             android:name=".activities.DetailActivity"
             android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppTheme.ActionBar" >
+            android:theme="@style/AppTheme.ActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity" />
+                android:value=".activities.MainActivity"/>
         </activity>
         <activity
             android:name=".activities.CommentsActivity"
             android:label="@string/title_activity_comments"
             android:parentActivityName=".activities.DetailActivity"
-            android:theme="@style/AppTheme.ActionBar" >
+            android:theme="@style/AppTheme.ActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.DetailActivity" />
+                android:value=".activities.DetailActivity"/>
         </activity>
         <activity
             android:name=".activities.AddCommentActivity"
             android:label="@string/title_activity_add_comment"
             android:parentActivityName=".activities.CommentsActivity"
             android:theme="@style/AppTheme.ActionBar"
-            android:windowSoftInputMode="stateAlwaysVisible" >
+            android:windowSoftInputMode="stateAlwaysVisible">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.CommentsActivity" />
+                android:value=".activities.CommentsActivity"/>
         </activity>
         <activity
             android:name=".activities.WebViewActivity"
             android:hardwareAccelerated="true"
             android:noHistory="true"
             android:parentActivityName=".activities.LoginActivity"
-            android:windowSoftInputMode="adjustResize" >
+            android:windowSoftInputMode="adjustResize">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.LoginActivity" />
+                android:value=".activities.LoginActivity"/>
         </activity>
         <activity
             android:name=".activities.CheckEmailActivity"
             android:label="@string/title_activity_check_email"
             android:parentActivityName=".activities.LoginActivity"
-            android:theme="@style/AppTheme.ActionBar" >
+            android:theme="@style/AppTheme.ActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.LoginActivity" />
+                android:value=".activities.LoginActivity"/>
         </activity>
         <activity
             android:name=".activities.SearchResultsActivity"
             android:label="@string/title_activity_search"
             android:parentActivityName=".activities.MainActivity"
-            android:theme="@style/AppTheme.ActionBar" >
+            android:theme="@style/AppTheme.ActionBar">
             <intent-filter>
-                <action android:name="android.intent.action.SEARCH" />
+                <action android:name="android.intent.action.SEARCH"/>
             </intent-filter>
             <intent-filter>
-                <action android:name="android.intent.action.VIEW" />
+                <action android:name="android.intent.action.VIEW"/>
             </intent-filter>
 
             <meta-data
                 android:name="android.app.searchable"
-                android:resource="@xml/searchable" />
+                android:resource="@xml/searchable"/>
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value=".activities.MainActivity" />
+                android:value=".activities.MainActivity"/>
         </activity>
         <activity
             android:name=".activities.PostIdeaWelcomeActivity"
             android:label="Instructions"
-            android:theme="@style/AppTheme.ActionBar" >
+            android:theme="@style/AppTheme.ActionBar">
         </activity>
     </application>
 
