--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,5 +34,8 @@ dependencies {
     compile 'com.google.android.gms:play-services:7.3.0'
     compile 'com.google.guava:guava:18.0'
     compile 'com.microsoft.azure:azure-mobile-services-android-sdk:2.0-beta'
-    compile(group: 'com.microsoft.azure', name: 'azure-notifications-handler', version: '1.0.1', ext: 'jar')
+    compile 'com.microsoft.azure:azure-notifications-handler:1.0.1@jar'
+    compile 'com.android.support:multidex:1.0.0'
+    compile files('libs/notification-hubs-0.4.jar')
+//    compile files('libs/notifications-1.0.1.jar')
 }
